# Jaculus-esp32

./: .gitignore  README.md  lint.sh  sdkconfig.defaults-esp32  sdkconfig.defaults-esp32s3  sdkconfig.defaults-esp32s3-octal  sdkconfig.defaults-esp32s3-quad
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/espFeatures/: adcFeature.h  convertFeature.h  displayBindings.h  extendLifetimeFeature.h  freeRTOSEventQueue.h  gpioFeature.h  i2cFeature.h  ledcFeature.h  motorFeature.h  oneWireFeature.h  pwmFeature.h  raycasterFeature.h  rendererFeature.h  selectFeature.h  serialFeature.h  simpleRadioFeature.h  smartLedFeature.h  spiFeature.h  udpSocketFeature.h  util.h  wifiFeature.h
main/espFeatures/hub75/: hub75Feature.cpp  hub75Feature.h
main/espFeatures/renderer/: rendererFeature.cpp  rendererFeature.h
main/platform/: esp32.h  esp32c3.h  esp32s3.h  espCommon.h  espNvsKeyValue.cpp  espNvsKeyValue.h  espWifi.cpp  espWifi.h
main/resources/: CMakeLists.txt
main/util/: capsAllocator.h  displayTypes.h  iDisplayHolder.h  jtagStream.h  tcpStream.h  uartStream.h
scripts/: build-esp32-c3-generic.sh  build-esp32-generic.sh  build-esp32-s3-generic-octal.sh  build-esp32-s3-generic-quad.sh  build-esp32-s3-generic.sh  export-package.sh
ts-examples/@types/: hub75.d.ts  i2c.d.ts  motor.d.ts  onewire.d.ts  pwm.d.ts  raycaster.d.ts  renderer.d.ts  simpleradio.d.ts  spi.d.ts  udpSocket.d.ts  wifi.d.ts
ts-examples/src/: adc.ts  asteroids.ts  bytes.ts  constants.ts  doom.ts  index.ts  motor.ts  oled.ts  piezo.ts  pong.ts  pwm.ts  radiopresence.ts  renderTest.ts  renderer.ts  rp-hub75-spi.ts  serial.ts  servo.ts  snakeDisplay.ts  spiSender.ts  tetris.ts  udp.ts
ts-examples/src/games/: asteroids.ts  doom.ts  game_menu.ts  minesweeper.ts  pong.ts  snakeDisplay.ts  tetris.ts
(+8 files in other folders)
